# rcli

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
assets/: README.md  decode.b64  encode-png.b64  encode.b64
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
templates/: index.html
