[package]
name = "rcli"
version = "0.3.0"
authors = ["Ji Qin"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5.1"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
zxcvbn = "2.2"
