[package]
name = "rcli"
version = "0.7.0"
authors = ["Ji Qin"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["http2", "query", "tracing"] }
base64 = "0.22"
blake3 = "1.5"
chacha20poly1305 = "0.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
enum_dispatch = "0.3"
minijinja = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.37", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
    "fs",
] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zxcvbn = "2.2"
jsonwebtoken = { version = "9", default-features = false }
